fixes #10 update service info endpoint with only one node path param
